<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">OpenDialer</string>
    <string name="add_to_a_contact">Add to a contact</string>
    <string name="anonymous">Anonymous</string>
    <string-array name="array_quick_responses">
        <item name="array_quick_responses0">Can\'t talk now. What\'s up?</item>
        <item name="array_quick_responses1">I\'ll call you right back.</item>
        <item name="array_quick_responses2">I\'ll call you later.</item>
        <item name="array_quick_responses3">Can\'t talk now. Call me later?</item>
    </string-array>
    <string name="blocked_call">Blocked call</string>
    <string name="call_connecting_title">Connecting</string>
    <string name="call_details">Call details</string>
    <string name="call_dialing_title">Dialing</string>
    <string name="call_disconnecting_title">Disconnecting</string>
    <string name="call_holding_title">On hold</string>
    <string name="call_ringing_title">Incoming call</string>
    <string name="call_disconnected_title">Disconnected</string>
    <string name="channel_incoming_calls">Incoming Calls</string>
    <string name="channel_ongoing_calls">Ongoing Calls</string>
    <string name="channel_outgoing_calls">Outgoing Calls</string>
    <string name="contacts">Contacts</string>
    <string name="copy_number">Copy number</string>
    <string name="create_new_contact">Create new contact</string>
    <string name="customize_quick_responses">Customize quick responses</string>
    <string name="dark">Dark</string>
    <string name="delete">Delete</string>
    <string name="edit_number_before_call">Edit number before call</string>
    <string name="edit_quick_response">Edit quick response</string>
    <string name="error_write_something">You have to write something!</string>
    <string name="fight">Fight</string>
    <string name="general">General</string>
    <string name="hide">Hide</string>
    <string name="incoming_call">Incoming call</string>
    <string name="light">Light</string>
    <string name="long_press_delete">Long press to delete</string>
    <string name="missed_call">Missed call</string>
    <string name="new_quick_response">New quick response</string>
    <string name="notification_incoming_call_title">Incoming call: %1$s</string>
    <string name="notification_ongoing_call_title">Ongoing call: %1$s</string>
    <string name="notification_on_hold_call_title">On hold call: %1$s</string>
    <string name="notification_outgoing_call_title">Calling: %1$s</string>
    <string name="option_short" comment="option_short&#10;&#10;This is used on the incoming call screen, on one of the four buttons. It needs to be short since the font is very wide.">Option</string>
    <string name="option" comment="option&#10;&#10;This is used as the toolbar title for the settings screen.">Option</string>
    <string name="outgoing_call">Outgoing call</string>
    <string name="profile">Profile</string>
    <string name="recents">Recents</string>
    <string name="rejected_call">Rejected call</string>
    <string name="run">Run</string>
    <string name="send_message">Send message</string>
    <string name="set_battery_saver">Set by Battery Saver</string>
    <string name="set_system">Follow System</string>
    <string name="text_copied">Text copied</string>
    <string name="theme">Theme</string>
    <string name="voicemail_call">Voicemail Call</string>
    <string name="write_your_own">Write your own…</string>
    <string name="your_text_here">Your text here</string>
    <string name="inCall" comment="inCall&#10;&#10;This is used in the settings screen, as header for the group of settings which are call related">In-Call</string>
    <string name="call_log_item_subtitle_number" translatable="false">(%1$d) %2$s</string>
    <string name="call_log_item_subtitle" translatable="false">%1$s</string>
    <string name="placeholder_call_log">To see your call log, turn on the phone permissions</string>
    <string name="placeholder_contacts">To see your contacts, turn on the contacts permissions</string>
    <string name="turn_on">Turn on</string>
    <string name="default_title_on">OpenDialer is set as default phone app</string>
    <string name="default_title_off">Set OpenDialer as default phone app</string>
    <string name="add">Add</string>
    <string name="placeholder_quick_responses">Press the ADD button in the upper right corner to start customizing your quick responses</string>
    <string name="placeholder_search_permissions">To see suggestions, turn on the phone permissions</string>
    <string name="version" translatable="false">v%1$s</string>
    <string name="sound_vibration">Sounds and vibration</string>
    <string name="info">Info</string>
    <string name="searchContacts">Search contacts</string>
    <string name="choose_sim_card">Choose SIM for this call</string>
    <string name="nothingHere">Mmh..nothing here</string>
    <string name="conferenceCall">Conference Call</string>
    <string name="split">Split</string>
    <string name="manageConferenceCall">Manage conference call</string>
    <string name="dialer">Dialer</string>
    <string name="manageBlockedNumbers">Manage blocked numbers</string>
    <string name="blockThisCaller">Block this caller</string>
    <string name="unblockThisCaller">Unblock this caller</string>
    <string name="numberBlocked">%1$s blocked</string>
    <string name="numberUnblocked">%1$s unblocked</string>
    <string name="notificationSettings">Notification Settings</string>
    <string name="searchContactsHeader">All contacts</string>
    <string name="searchContactsActionMakeCall">Call %1$s</string>
    <string name="profile_label_about">About OpenDialer</string>
    <string name="profile_desc_about">Learn more about the app</string>
    <string name="profile_label_options">Options</string>
    <string name="profile_desc_options">Let\'s tweak it a little bit!</string>
</resources>
