<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <dev.alenajam.opendialer.view.MyButton
        android:id="@+id/fight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"

        android:text="@string/fight"
        app:borderColor="green"
        app:layout_constraintBottom_toTopOf="@+id/option"
        app:layout_constraintEnd_toEndOf="@id/option"
        app:layout_constraintStart_toStartOf="@id/option"
        app:whichSfx="none" />

    <dev.alenajam.opendialer.view.MyButton
        android:id="@+id/run"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/run"
        app:borderColor="red"
        app:layout_constraintBottom_toBottomOf="@+id/fight"
        app:layout_constraintEnd_toEndOf="@id/hide"
        app:layout_constraintStart_toStartOf="@id/hide"
        app:whichSfx="none" />

    <dev.alenajam.opendialer.view.MyButton
        android:id="@+id/option"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"

        android:text="@string/option_short"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/hide"
        app:layout_constraintStart_toStartOf="parent"
        app:whichSfx="none" />

    <dev.alenajam.opendialer.view.MyButton
        android:id="@+id/hide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"

        android:text="@string/hide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/option"
        app:whichSfx="none" />
</androidx.constraintlayout.widget.ConstraintLayout>