<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet_inner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/windowBackground"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:paddingVertical="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/icon_about"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@id/label_about"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label_about"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/profile_label_about"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon_about"
                app:layout_constraintTop_toTopOf="@id/icon_about"
                app:layout_constraintWidth_max="305dp" />

            <TextView
                android:id="@+id/desc_about"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/profile_desc_about"
                android:textColor="?android:textColorSecondary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/label_about"
                app:layout_constraintStart_toStartOf="@id/label_about"
                app:layout_constraintTop_toBottomOf="@id/label_about" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:paddingVertical="20dp"
            app:layout_constraintTop_toBottomOf="@id/about">

            <ImageView
                android:id="@+id/icon_options"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@id/label_options"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label_options"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/profile_label_options"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon_options"
                app:layout_constraintTop_toTopOf="@id/icon_options"
                app:layout_constraintWidth_max="305dp" />

            <TextView
                android:id="@+id/desc_options"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/profile_desc_options"
                android:textColor="?android:textColorSecondary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/label_options"
                app:layout_constraintStart_toStartOf="@id/label_options"
                app:layout_constraintTop_toBottomOf="@id/label_options" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>